CHATS_SIT/force-app/main/default/objects/T_PMT_PLAN__c/validationRules/Paymnt_Plan_Amt_cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Paymnt_Plan_Amt_cannot_Change</fullName>
    <active>true</active>
    <description>Once Record is Created, Payment Plan Amount cannot be changed.
Payment Plan Amount must be greater than Zero.</description>
    <errorConditionFormula>OR( 
    AND( NOT( ISNEW() ) ,
        ISCHANGED( AMT_PLAN_PMT__c )
    ),
    AMT_PLAN_PMT__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>AMT_PLAN_PMT__c</errorDisplayField>
    <errorMessage>Once Record is Created, Payment Plan Amount cannot be changed.
Payment Plan Amount must be greater than Zero.</errorMessage>
</ValidationRule>