CHATS_SIT/force-app/main/default/objects/T_PMT_PLAN__c/validationRules/Provider_is_Readonly.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_is_Readonly</fullName>
    <active>true</active>
    <description>Provider is read only once the record is created. CHAT-529</description>
    <errorConditionFormula>ISCHANGED(IDN_PROVR__c)</errorConditionFormula>
    <errorMessage>Provider is read only once the record is created</errorMessage>
</ValidationRule>